--- a/bio.html
+++ b/bio.html
@@ -48,17 +48,17 @@
         </nav>
         <ul class="icones-redes-sociais">
             <li>
-                <a href="https://github.com/joaodasilva" class="github">
+                <a href="https://github.com/joaodasilva" class="github" data-legenda="veja meus projetos opensource">
                     Github
                 </a>
             </li>
             <li>
-                <a href="https://twitter.com/joaodasilva" class="twitter">
+                <a href="https://twitter.com/joaodasilva" class="twitter" data-legenda="Siga-me no Twitter">
                     Twitter
                 </a>
             </li>
             <li>
-                <a href="https://br.linkedin.com/pub/joão-da-silva/32/4/508" class="linkedin">
+                <a href="https://br.linkedin.com/pub/joão-da-silva/32/4/508" class="linkedin" data-legenda="Veja meu currículo">
                     LinkedIn
                 </a>
             </li>
