--- a/bio.html
+++ b/bio.html
@@ -33,7 +33,59 @@
             <h2 class="subtitulo-texto">Comunidade</h2>
             <p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei <a href="portfolio.html">diversas palestras</a> e mantenho um <a href="blog.html">blog</a>.</p>
         </div>
+
+        <h2 class="subtitulo-texto">Habilidades</h2>
+        <table class="habilidades">
+            <thead>
+                <tr>
+                    <th>Habilidade</th>
+                    <th>Nível</th>
+                    <th>Experiências</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <th>HTML5</th>
+                    <td>Proficiente</td>
+                    <td>Uso em todos os sites que desenvolvo</td>
+                </tr>
+
+                <tr>
+                    <th>CSS3</th>
+                    <td>Proficiente</td>
+                    <td>Uso em todos os sites que desenvolvo</td>
+                </tr>
+
+                <tr>
+                    <th>JavaScript</th>
+                    <td>Proficiente</td>
+                    <td>Uso em todos os sites que desenvolvo, aplicando-o de forma não-obstrutiva</td>
+                </tr>
+
+                <tr>
+                    <th>Design</th>
+                    <td>Proficiente</td>
+                    <td>Formado em web design pela Universidade de Jacarezinho</td>
+                </tr>
+
+                <tr>
+                    <th>Git</th>
+                    <td colspan="2" rowspan="3">Estudando</td>
+                </tr>
+
+                <tr>
+                    <th>Angular</th>
+                </tr>|
+
+                <tr>
+                    <th>Java</th>
+                </tr>|
+            </tbody>
+        </table>
+
     </main>
+
     <img src="imagens/eu.jpg" alt="Minha foto" class="minha-foto">
     <aside class="navegacao-site">
         <h1>João da Silva</h1>
